test/types/records/split-init/split-init-type-multiple.good
split-init-type-multiple.chpl:3: In function 'main':
split-init-type-multiple.chpl:9: error: type alias split initialization uses different types
